kubernetes/clusters/hyperion/seaweedtest/components/ingress/ingress-aritrosinha.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: seaweedtest-master-aritrosinha
  namespace: storage-test
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: "web,websecure"
    link.argocd.argoproj.io/external-link: "http://seaweedtest.hyperion.aritrosinha.dpdns.org/"
spec:
  ingressClassName: traefik
  rules:
    - host: "seaweedtest.hyperion.aritrosinha.dpdns.org"
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: seaweedtest-seaweedfs-master
                port:
                  number: 9333
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: seaweedtest-volume-aritrosinha
  namespace: storage-test
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: "web,websecure"
    argocd.argoproj.io/ignore-default-links: "true"
spec:
  ingressClassName: traefik
  rules:
    - host: "*.volume.seaweedtest.hyperion.aritrosinha.dpdns.org"
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: seaweedtest-seaweedfs-volume
                port:
                  number: 8080
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: seaweedtest-admin-aritrosinha
  namespace: storage-test
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: "web,websecure"
    link.argocd.argoproj.io/external-link: "http://admin.seaweedtest.hyperion.aritrosinha.dpdns.org/"
spec:
  ingressClassName: traefik
  rules:
    - host: "admin.seaweedtest.hyperion.aritrosinha.dpdns.org"
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: seaweedtest-seaweedfs-admin
                port:
                  number: 23646
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: seaweedtest-filer-aritrosinha
  namespace: storage-test
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: "web,websecure"
    link.argocd.argoproj.io/external-link: "http://filer.seaweedtest.hyperion.aritrosinha.dpdns.org/"
spec:
  ingressClassName: traefik
  rules:
    - host: "filer.seaweedtest.hyperion.aritrosinha.dpdns.org"
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: seaweedtest-seaweedfs-filer
                port:
                  number: 8888
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: seaweedtest-s3-aritrosinha
  namespace: storage-test
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: "web,websecure"
    link.argocd.argoproj.io/external-link: "http://s3.seaweedtest.hyperion.aritrosinha.dpdns.org/"
spec:
  ingressClassName: traefik
  rules:
    - host: "s3.seaweedtest.hyperion.aritrosinha.dpdns.org"
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: seaweedtest-seaweedfs-s3
                port:
                  number: 8333
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: seaweedtest-webdav-aritrosinha
  namespace: storage-test
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: "web,websecure"
    link.argocd.argoproj.io/external-link: "http://webdav.seaweedtest.hyperion.aritrosinha.dpdns.org/"
spec:
  ingressClassName: traefik
  rules:
    - host: "webdav.seaweedtest.hyperion.aritrosinha.dpdns.org"
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: seaweedtest-seaweedfs-webdav
                port:
                  number: 7333
