kubernetes/clusters/hyperion/seaweedtest/components/ingress/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: seaweedtest-master
  namespace: storage-test
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: "web,websecure"
    link.argocd.argoproj.io/external-link: "http://seaweedtest.hyperion.aritrosinha.dpdns.org/"
spec:
  ingressClassName: traefik
  rules:
    - host: "seaweedtest.hyperion.aritrosinha.dpdns.org"
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: seaweedtest-seaweedfs-master
                port:
                  number: 9333
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: seaweedtest-volume
  namespace: storage-test
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: "web,websecure"
    argocd.argoproj.io/ignore-default-links: "true"
spec:
  ingressClassName: traefik
  rules:
    - host: "*.volume.seaweedtest.hyperion.aritrosinha.dpdns.org"
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: seaweedtest-seaweedfs-volume
                port:
                  number: 8080
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: seaweedtest-admin
  namespace: storage-test
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: "web,websecure"
    link.argocd.argoproj.io/external-link: "http://admin.seaweedtest.hyperion.aritrosinha.dpdns.org/"
spec:
  ingressClassName: traefik
  rules:
    - host: "admin.seaweedtest.hyperion.aritrosinha.dpdns.org"
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: seaweedtest-seaweedfs-admin
                port:
                  number: 23646
